--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,72 @@
-name: showmyworld-ci 
+name: showmyworld-ci
 
 on:
-    push:
-        branches:
-            - main
-            - develop
-    pull_request:
-        branches:
-            - main
-            - develop
+  push:
+    branches:
+      - main
+      - develop
+  pull_request:
+    branches:
+      - main
+      - develop
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
 
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: checkout code
-              uses: actions/checkout@v3
+      - name: setup node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
-            - name: setup node.js
-              uses: actions/setup-node@v3
-              with:
-                node-version: '20'
-            
-            - name: install pnpm dependency
-              run: npm install -g pnpm
+      - name: install pnpm dependency
+        run: npm install -g pnpm
 
-            - name: install dependencies
-              run: pnpm install
+      - name: install dependencies
+        run: pnpm install
 
-            - name: run build
-              run: pnpm build
+      - name: run build
+        run: pnpm build
 
+  eslint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
 
+      - name: setup node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
+      - name: install pnpm dependency
+        run: npm install -g pnpm
+
+      - name: install dependencies
+        run: pnpm install
+
+      - name: run eslint
+        run: pnpm run eslint
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
+
+      - name: setup node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: install pnpm dependenct
+        run: npm install -g pnpm
+
+      - name: install dependencies
+        run: pnpm install
+
+      - name: run test
+        run: pnpm run test
