fix(devops): fix eslint command in eslint job and apply eslint fixes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         run: pnpm install
 
       - name: run eslint
-        run: pnpm run eslint
+        run: pnpm run lint
 
   test:
     runs-on: ubuntu-latest
