--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
         run: pnpm install
 
       - name: run test
-        run: pnpm run test
+        run: pnpm run test:watch
 
   sonarqube:
     name: sonarqube
@@ -94,16 +94,3 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL}}
-
-      # - name: run sonarqube
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL}}
-      #   run: |
-      #     sonar-scanner \
-      #         -Dsonar.projectKey=showmyworld-api \
-      #         -Dsonar.sources=. \
-      #         -Dsonar.host.url=$SONAR_HOST_URL \
-      #         -Dsonar.login=$SONAR_TOKEN \
-      #         -Dsonar.language=js \
-      #         -Dsonar.sourceEncoding=UTF-8
