fix(devops): update test script in github action pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
         run: pnpm install
 
       - name: run test
-        run: pnpm run test:watch
+        run: pnpm run test
 
   sonarqube:
     name: sonarqube
