devops(github): update rules for sonarqube job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,7 @@ jobs:
   sonarqube:
     name: sonarqube
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'pull_request'}}
     steps:
       - name: checkout code
         uses: actions/checkout@v3
